# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parse-reparsepoint"
version = "0.1.0"
description = "Parse NTFS reparse points"
license = { file = "LICENSE" }
readme =  "README.md"
authors = [ { name = "Jeremy Dunn", email = "jeremy.dunn315@gmail.com" } ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python"
]
keywords = ["ntfs", "reparse point", "parse", "reparsepoint", "onedrive"]
dependencies = [
    "argparse",
    "re",
    "string",
    "typing"
]
requires-python = ">=3.6.0"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "flake8"]

[project.urls]
homepage = "https://github.com/stolenfootball/parse-reparsepoint"

[project.scripts]
parse-reparsepoint = "parse_reparsepoint.__main__:main"