# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parse-reparsepoint"
version = "0.1.0"
description = "Parse NTFS reparse points"
license = { file = "LICENSE" }
readme =  "README.md"
authors = [ { name = "Jeremy Dunn", email = "jeremy.dunn315@gmail.com" } ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python"
]
keywords = ["ntfs", "reparse point", "parse", "reparsepoint", "onedrive"]
dependencies = [
    "argparse",
    "typing"
]
requires-python = ">=3.6.0"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "flake8"]

[project.urls]
homepage = "https://github.com/stolenfootball/parse-reparsepoint"

[project.scripts]
parse-reparsepoint = "parse_reparsepoint.__main__:main"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version         = "{version}"'
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
"scr/parse_reparsepoint/__init__.py" = ["{version}"]

